--- a/MyScience/Begin/MyScience/MainPage.xaml
+++ b/MyScience/Begin/MyScience/MainPage.xaml
@@ -114,7 +114,7 @@
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation ="Horizontal" Height="80" Width="400">
-                                <Image Source="{Binding Path=ImageName}" Width="80" Height="80"/>
+                                <Image x:Name="{Binding ImageName}" Source="{Binding ImageName, Converter= {StaticResource ImageConverter}}" Width="80" Height="80" ImageOpened="Image_Opened"/>
                                 <StackPanel Orientation="Vertical" Height="80">
                                 <StackPanel Orientation="Horizontal" Height="40">
                                     <TextBlock Width="100" FontSize="22" Text="Project:" Height="40"/>
@@ -135,7 +135,7 @@
                 <ItemsControl Name="PictureWall" ItemsSource="{Binding Items}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Image Source="{Binding Path=ImageName}" Width="77" Height="77"/>
+                            <Image x:Name="{Binding ImageName}" Source="{Binding ImageName, Converter= {StaticResource ImageConverter}}" Width="77" Height="77" ImageOpened="Image_Opened"/>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                     <ItemsControl.ItemsPanel>
