--- a/MyScience/Begin/MyScience/MainPage.xaml
+++ b/MyScience/Begin/MyScience/MainPage.xaml
@@ -77,7 +77,7 @@
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <Image Name="userPic" Grid.Column="0" Source="Images/unknownuser.jpg"  Height="160" Width="160" HorizontalAlignment="Left" Stretch="Fill" VerticalAlignment="Top" MouseLeftButtonUp="userPic_MouseLeftButtonUp" />
+                        <Image Name="userPic" Grid.Column="0" Source="Images/unknownuser.jpg"  Height="160" Width="160" HorizontalAlignment="Left" Stretch="UniformToFill" VerticalAlignment="Top" MouseLeftButtonUp="userPic_MouseLeftButtonUp" />
                         <Grid x:Name="UserInfoGrid" Grid.Column="1" Margin="13,0,49,0">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
@@ -115,7 +115,7 @@
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation ="Horizontal" Height="80" Width="400">
-                                <Image Source="{Binding Path=ImageName}" Width="80" Height="60"/>
+                                <Image Source="{Binding Path=LowResImageName}" Width="80" Height="60"/>
                                 <StackPanel Orientation="Vertical" Height="80">
                                 <StackPanel Orientation="Horizontal" Height="40">
                                     <TextBlock Width="100" FontSize="22" Text="Project:" Height="40"/>
@@ -136,7 +136,7 @@
                 <ItemsControl Name="PictureWall" ItemsSource="{Binding Items}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Image Source="{Binding Path=ImageName}" Width="80" Height="60"/>
+                            <Image Source="{Binding Path=LowResImageName}" Width="80" Height="60"/>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                     <ItemsControl.ItemsPanel>
