--- a/MyScience/Begin/MyScience/MainPage.xaml
+++ b/MyScience/Begin/MyScience/MainPage.xaml
@@ -37,16 +37,24 @@
 
             <!--Pivot item one-->
             <controls:PanoramaItem Header="Projects" Foreground="#FF181515">
-                <ListBox x:Name="MainListBox" Margin="0,0,-12,0" ItemsSource="{Binding Items}" SelectionChanged="MainListBox_SelectionChanged" Foreground="#FF181515">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Margin="0,0,0,17" Width="432">
-                                <TextBlock Text="{Binding Path=Name}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}" Foreground="#FF181515"/>
-                                <TextBlock Text="{Binding Path=Description}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}" Foreground="#FF181515"/>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
+                <Grid x:Name="projectsgrid" Width="444" Height="630" Margin="0, -140, 0, 0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Image Grid.Row="0" Height="50" Width="50" Source="Images/refresh-icon.png" Margin="0, 40, 35, 0" HorizontalAlignment="Right" Name="refreshproject" Stretch="Fill" VerticalAlignment="Top" MouseLeftButtonUp="refreshproject_MouseLeftButtonUp" />
+                    <ListBox Grid.Row="1" x:Name="MainListBox" Margin="0,30,-12,0" ItemsSource="{Binding Items}" SelectionChanged="MainListBox_SelectionChanged" Foreground="#FF181515">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Margin="0,0,0,17" Width="432">
+                                    <TextBlock Text="{Binding Path=Name}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}" Foreground="#FF181515"/>
+                                    <TextBlock Text="{Binding Path=Description}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}" Foreground="#FF181515"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                   
+                </Grid>
             </controls:PanoramaItem>
 
             <!--Pivot item two-->
@@ -66,30 +74,37 @@
             
             <!--Pivot item three-->
             <controls:PanoramaItem Header="Profile">
-                <!--ContentPanel - place additional content here-->
-                <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0" Width="409">
+                <Grid x:Name="profilegrid" Width="444" Height="630" Margin="0, -140, 0, 0">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <Grid Name="UserInfoPlusPic" Grid.Row="0" HorizontalAlignment="Left" Margin="12,0,0,0" VerticalAlignment="Top" Width="444">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <Image Name="userPic" Grid.Column="0" Source="Images/unknownuser.jpg"  Height="160" Width="160" HorizontalAlignment="Left" Stretch="UniformToFill" VerticalAlignment="Top" MouseLeftButtonUp="userPic_MouseLeftButtonUp" />
-                        <Grid x:Name="UserInfoGrid" Grid.Column="1" Margin="13,0,49,0">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="59*"/>
-                                <RowDefinition Height="59*" />
-                            </Grid.RowDefinitions>
-                            <TextBlock Name="userName" Height="44" HorizontalAlignment="Center" Text="" VerticalAlignment="Top" Width="220" FontSize="26" Margin="0,-1,-1,0" />
-                            <TextBlock Name="score" Height="44" HorizontalAlignment="Center" Text="" VerticalAlignment="Top" Width="220" FontSize="26" Margin="0,37,-1,0" Grid.RowSpan="2" />
-                            <TextBlock Grid.Row="1" Height="44" HorizontalAlignment="Center" Margin="0,35,-1,0" Name="scientistLevel" Text="" VerticalAlignment="Top" Width="220" FontSize="26" Grid.RowSpan="2" />
+                    <Image Grid.Row="0" Height="50" Width="50" Source="Images/refresh-icon.png" Margin="0, 40, 35, 0" HorizontalAlignment="Right" Name="refreshprofile" Stretch="Fill" VerticalAlignment="Top" MouseLeftButtonUp="refreshprofile_MouseLeftButtonUp" />
+
+                    <!--ContentPanel - place additional content here-->
+                    <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,15,12,0" Width="409">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Grid Name="UserInfoPlusPic" Grid.Row="0" HorizontalAlignment="Left" Margin="12,0,0,0" VerticalAlignment="Top" Width="444">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Image Name="userPic" Grid.Column="0" Source="Images/unknownuser.jpg"  Height="160" Width="160" HorizontalAlignment="Left" Stretch="UniformToFill" VerticalAlignment="Top" MouseLeftButtonUp="userPic_MouseLeftButtonUp" />
+                            <Grid x:Name="UserInfoGrid" Grid.Column="1" Margin="13,0,49,0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="59*"/>
+                                    <RowDefinition Height="59*" />
+                                </Grid.RowDefinitions>
+                                <TextBlock Name="userName" Height="44" HorizontalAlignment="Center" Text="" VerticalAlignment="Top" Width="220" FontSize="26" Margin="0,-1,-1,0" />
+                                <TextBlock Name="score" Height="44" HorizontalAlignment="Center" Text="" VerticalAlignment="Top" Width="220" FontSize="26" Margin="0,37,-1,0" Grid.RowSpan="2" />
+                                <TextBlock Grid.Row="1" Height="44" HorizontalAlignment="Center" Margin="0,35,-1,0" Name="scientistLevel" Text="" VerticalAlignment="Top" Width="220" FontSize="26" Grid.RowSpan="2" />
+                            </Grid>
                         </Grid>
                     </Grid>
-
                     <!--Grid Name="ActiveProjectsGrid" Grid.Row="1" HorizontalAlignment="Left" Margin="12,16,0,0" VerticalAlignment="Top" Width="444" Height="95">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -111,66 +126,88 @@
             </controls:PanoramaItem>
 
             <controls:PanoramaItem Header="Your Data">
-                <ListBox x:Name="SubmissionListBox" Margin="0,0,-12,0" ItemsSource="{Binding Items}" >
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation ="Horizontal" Height="80" Width="400">
-                                <!--Image Source="{Binding Path=LowResImageName}" Width="80" Height="60"/-->
-                                <Image x:Name="{Binding LowResImageName}" Source="{Binding LowResImageName, Converter= {StaticResource ImageConverter}}" Width="80" Height="80" ImageOpened="Image_Opened"/>
-                                <StackPanel Orientation="Vertical" Height="80">
-                                <StackPanel Orientation="Horizontal" Height="40">
-                                    <TextBlock Width="100" FontSize="22" Text="Project:" Height="40" Foreground="#FF181515"/>
-                                    <TextBlock Width="200" FontSize="22" Text="{Binding Path=ProjectName}" Height="40" Foreground="#FF181515"/>
+                <Grid x:Name="yourdatagrid" Width="444" Height="630" Margin="0, -140, 0, 0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Image Grid.Row="0" Height="50" Width="50" Source="Images/refresh-icon.png" Margin="0, 40, 35, 0" HorizontalAlignment="Right" Name="refreshyourdata" Stretch="Fill" VerticalAlignment="Top" MouseLeftButtonUp="refreshyourdata_MouseLeftButtonUp" />
+                    <ListBox x:Name="SubmissionListBox" Grid.Row="1" Margin="0,30,-12,0" ItemsSource="{Binding Items}" >
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation ="Horizontal" Height="80" Width="400">
+                                    <!--Image Source="{Binding Path=LowResImageName}" Width="80" Height="60"/-->
+                                    <Image x:Name="{Binding LowResImageName}" Source="{Binding LowResImageName, Converter= {StaticResource ImageConverter}}" Width="80" Height="80" ImageOpened="Image_Opened"/>
+                                    <StackPanel Orientation="Vertical" Height="80">
+                                        <StackPanel Orientation="Horizontal" Height="40">
+                                            <TextBlock Width="100" FontSize="22" Text="Project:" Height="40" Foreground="#FF181515"/>
+                                            <TextBlock Width="200" FontSize="22" Text="{Binding Path=ProjectName}" Height="40" Foreground="#FF181515"/>
+                                        </StackPanel>
+                                        <StackPanel Orientation="Horizontal" Height="40">
+                                            <TextBlock Width="100" FontSize="22" Text="Date:" Height="40" Foreground="#FF181515"/>
+                                            <TextBlock Width="200" FontSize="22" Text="{Binding Path=Time}" Height="40" Foreground="#FF181515"/>
+                                        </StackPanel>
+                                    </StackPanel>
                                 </StackPanel>
-                                <StackPanel Orientation="Horizontal" Height="40">
-                                    <TextBlock Width="100" FontSize="22" Text="Date:" Height="40" Foreground="#FF181515"/>
-                                    <TextBlock Width="200" FontSize="22" Text="{Binding Path=Time}" Height="40" Foreground="#FF181515"/>
-                                </StackPanel>
-                                </StackPanel>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                </Grid>
             </controls:PanoramaItem>
 
             <controls:PanoramaItem Header="Your Data">
-                <ItemsControl Name="PictureWall" ItemsSource="{Binding Items}">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <!--mage Source="{Binding Path=LowResImageName}" Width="80" Height="60"/-->
-                            <Image x:Name="{Binding LowResImageName}" Source="{Binding LowResImageName, Converter= {StaticResource ImageConverter}}" Width="77" Height="77" ImageOpened="Image_Opened"/>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <toolkit:WrapPanel ItemWidth="82" ItemHeight="62"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                </ItemsControl>
+                <Grid x:Name="yourdatagrid2" Width="444" Height="630" Margin="0, -140, 0, 0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Image Grid.Row="0" Height="50" Width="50" Source="Images/refresh-icon.png" Margin="0, 40, 35, 0" HorizontalAlignment="Right" Name="refreshyourdata2" Stretch="Fill" VerticalAlignment="Top" MouseLeftButtonUp="refreshyourdata2_MouseLeftButtonUp" />
+                    <ItemsControl Name="PictureWall" Grid.Row="1" Margin="0,30,-12,0" ItemsSource="{Binding Items}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <!--mage Source="{Binding Path=LowResImageName}" Width="80" Height="60"/-->
+                                <Image x:Name="{Binding LowResImageName}" Source="{Binding LowResImageName, Converter= {StaticResource ImageConverter}}" Width="77" Height="77" ImageOpened="Image_Opened"/>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <toolkit:WrapPanel ItemWidth="82" ItemHeight="62"/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                    </ItemsControl>
+                </Grid>
             </controls:PanoramaItem>
 
             <controls:PanoramaItem Header="To Submit">
-                <ListBox x:Name="ToBeSubmitBox" Margin="0,0,-12,0" ItemsSource="{Binding Items}" Visibility="Collapsed" SelectionChanged="ToBeSubmitBox_SelectionChanged">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation ="Horizontal" Height="80" Width="400">
-                                <Image Source="{Binding ImageName, Converter= {StaticResource ImageConverter}}" Width="80" Height="80"/>
-                                <StackPanel Orientation="Vertical" Height="80">
-                                    <StackPanel Orientation="Horizontal" Height="40">
-                                        <TextBlock Width="100" FontSize="22" Text="Project:" Height="40" Foreground="#FF181515"/>
-                                        <TextBlock Width="200" FontSize="22" Text="{Binding Path=ProjectName}" Height="40" Foreground="#FF181515"/>
-                                    </StackPanel>
-                                    <StackPanel Orientation="Horizontal" Height="40">
-                                        <TextBlock Width="100" FontSize="22" Text="Date:" Height="40" Foreground="#FF181515"/>
-                                        <TextBlock Width="200" FontSize="22" Text="{Binding Path=Time, Converter= {StaticResource DateConverter}}" Height="40" Foreground="#FF181515"/>
+                <Grid x:Name="tobesubmitgrid" Width="444" Height="630" Margin="0, -140, 0, 0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Image Grid.Row="0" Height="50" Width="50" Margin="0, 40, 35, 0" HorizontalAlignment="Right" Name="refreshtobesubmit" Stretch="Fill" VerticalAlignment="Top"  />
+
+                    <ListBox x:Name="ToBeSubmitBox" Grid.Row="1" Margin="0, 30,-12,0" ItemsSource="{Binding Items}" Visibility="Collapsed" SelectionChanged="ToBeSubmitBox_SelectionChanged">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation ="Horizontal" Height="80" Width="400">
+                                    <Image Source="{Binding ImageName, Converter= {StaticResource ImageConverter}}" Width="80" Height="80"/>
+                                    <StackPanel Orientation="Vertical" Height="80">
+                                        <StackPanel Orientation="Horizontal" Height="40">
+                                            <TextBlock Width="100" FontSize="22" Text="Project:" Height="40" Foreground="#FF181515"/>
+                                            <TextBlock Width="200" FontSize="22" Text="{Binding Path=ProjectName}" Height="40" Foreground="#FF181515"/>
+                                        </StackPanel>
+                                        <StackPanel Orientation="Horizontal" Height="40">
+                                            <TextBlock Width="100" FontSize="22" Text="Date:" Height="40" Foreground="#FF181515"/>
+                                            <TextBlock Width="200" FontSize="22" Text="{Binding Path=Time, Converter= {StaticResource DateConverter}}" Height="40" Foreground="#FF181515"/>
+                                        </StackPanel>
                                     </StackPanel>
                                 </StackPanel>
-                            </StackPanel>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                    </ListBox>
+                </Grid>
             </controls:PanoramaItem>
-            
         </controls:Panorama>
+
     </Grid>
 </phone:PhoneApplicationPage>
